@@ -1,5 +1,12 @@
 #!/bin/sh
 
+# This file contains the configuration for the Java server
+
+# *******************************************************
+# ATTENTION: Make sure to always also check the variables at the end
+# of this file as there could be overwritten ones!
+# *******************************************************
+
 SERVER_NAME=MASTER
 
 MEMORY="1024m"
@@ -15,26 +22,56 @@ MONGODB_HOST=localhost
 MONGODB_PORT=27017
 EXPEDITION_PORT=2010
 
-# Start replication upon startup
+# Start replication upon startup?
+# If you activate this make sure to
+# set the REPLICATION_CHANNEL to the
+# same channel the master is using
 REPLICATE_ON_START=False
+
+# Host where the master Java instance is running
+# Make sure firewall configurations allow access
 REPLICATE_MASTER_SERVLET_HOST=
 REPLICATE_MASTER_SERVLET_PORT=
+
+# Host and port where RabbitMQ is running 
+# (port is normally something like 5672)
 REPLICATE_MASTER_QUEUE_HOST=
 REPLICATE_MASTER_QUEUE_PORT=
 
-ADDITIONAL_JAVA_ARGS="-XX:+UseMembar"
+# Automatic build and test configuration
+DEPLOY_TO=
+BUILD_BEFORE_START=False
+BUILD_FROM=master
+COMPILE_GWT=True
+RUN_TESTS=False
+CODE_DIRECTORY=code
+
+# Specify an email adress that should be notified
+# whenever a build or install has been completed
+BUILD_COMPLETE_NOTIFY=
+
+# Specify an email address that should be notified
+# whenever the server has been started
+SERVER_STARTUP_NOTIFY=
+
+# Specify filename that is usually located at
+# http://release.sapsailing.com/ that should
+# be used as a base for the server
+INSTALL_FROM_RELEASE=
+
+# Specify name of file that can usually be found
+# at http://release.sapsailing.com/environments
+USE_ENVIRONMENT=
+
+INSTANCE_ID="$SERVER_NAME:$SERVER_PORT"
+ADDITIONAL_JAVA_ARGS="-Dpersistentcompetitors.clear=false -XX:+UseMembar -XX:+UseParallelGC -XX:+UseParallelOldGC -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:logs/gc.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
 
 JAVA_HOME=$HOME/jdk1.7.0_02
-
-# Make it possible to overwrite configuration
-# by using user-data that is injected into an instance
-ON_AMAZON=`command -v ec2-metadata`
-if [[ ! -z "$ON_AMAZON" ]]; then
-  echo "This server is running on Amazon. Following data is being used (based on user-data injected into instance):"
-  VARS=$(ec2-metadata -d | sed "s/user-data\: //g")
-  for var in $VARS; do
-        echo $var
-        export $var
-  done
+if [[ ! -d $JAVA_HOME ]] && [[ -f "/usr/libexec/java_home" ]]; then
+    JAVA_HOME=`/usr/libexec/java_home`
 fi
+
+ON_AMAZON=`command -v ec2-metadata`
+
+# **** Overwritten environment variables ****
 
